--- a/angular-steam/src/app/components/small-card-game/small-card-special/small-card-special.component.html
+++ b/angular-steam/src/app/components/small-card-game/small-card-special/small-card-special.component.html
@@ -1,3 +1,4 @@
 <div [ngStyle]="{'width': widthIfClosed}">
-    <img src="https://github.com/gknpp23/Angular-Developer-Training-DIO/raw/refs/heads/main/angular-steam/stray-store-artwork-01-en-10jun22.webp" alt="jogo favorito">
+    
+    <img [src]="imageUrl" alt="Imagem dinâmica">
 </div>
