--- a/angular-steam/src/app/components/small-card-game/small-card-game.component.css
+++ b/angular-steam/src/app/components/small-card-game/small-card-game.component.css
@@ -2,7 +2,7 @@ mat-card{
     min-height: 25vw !important;
     max-width: 25vw !important;
     font-size: 10px;     
-    color:aliceblue;
+    color:#f7f7f7;
     line-height: 1rem;
     margin-bottom: 25px;
     
