--- a/angular-steam/src/styles.css
+++ b/angular-steam/src/styles.css
@@ -8,7 +8,7 @@
 
 body{
     background-color: #15181E;
-    color: aliceblue;
+    color: #fafafa;
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
