--- a/angular-steam/src/app/components/sidebar/side-card/side-card.component.html
+++ b/angular-steam/src/app/components/sidebar/side-card/side-card.component.html
@@ -38,19 +38,20 @@
       <div [ngClass]="{'content-open': isSidenavOpen, 'content-closed': !isSidenavOpen}">
         <app-big-card-game></app-big-card-game> <!-- Passar valores de largura/altura de forma relativa-->
         
-        <p>Special Offers</p>
-
+        
+        <p style="margin-left: 3rem; padding-top: 2rem; font-size: large;">Special Offers</p>  
         <div [ngClass]="{'content-special-open': isSidenavOpen, 'content-special-closed': !isSidenavOpen}" class="special-cards-container" style="display: flex; gap: 1.5em; padding: 2.75em; margin: auto; overflow: hidden;"><!--adicionar estilos para a barra fechada/aberta-->
+          
             <app-small-card-special 
-            [widthIfClosed]="getWidth()" 
-            [imageUrl]="currentImageUrlCard01">
+              [widthIfClosed]="getWidth()" 
+              [imageUrl]="currentImageUrlCard01">
             </app-small-card-special> 
 
-            <app-small-card-special [widthIfClosed]="getWidth()" [imageUrl]="currentImageUrlCard01"></app-small-card-special>
+            <app-small-card-special [widthIfClosed]="getWidth()" [imageUrl]="currentImageUrlCard02"></app-small-card-special>
 
-            <app-small-card-special [widthIfClosed]="getWidth()" [imageUrl]="currentImageUrlCard01"></app-small-card-special>
+            <app-small-card-special [widthIfClosed]="getWidth()" [imageUrl]="currentImageUrlCard03"></app-small-card-special>
 
-            <app-small-card-special [widthIfClosed]="getWidth()" [imageUrl]="currentImageUrlCard01"></app-small-card-special>
+            <app-small-card-special [widthIfClosed]="getWidth()" [imageUrl]="currentImageUrlCard04"></app-small-card-special>
         </div>
         
       </div>
