--- a/angular-steam/src/app/components/small-card-game/small-card-game.component.css
+++ b/angular-steam/src/app/components/small-card-game/small-card-game.component.css
@@ -1,9 +1,12 @@
 mat-card{
+    padding: 2px;
     min-height: 25vw !important;
     max-width: 25vw !important;
-    font-size: 10px;     
+
+    font-size: 16px;     
+    font-weight: 700;
     color:#f7f7f7;
-    line-height: 1rem;
+    line-height: 1.25rem;
     margin-bottom: 25px;
     
     
